--- a/pom.xml
+++ b/pom.xml
@@ -40,24 +40,25 @@
          <scope>test</scope>
      </dependency>
 
-<!--     <dependency>-->
-<!--         <groupId>org.glassfish.jersey.core</groupId>-->
-<!--         <artifactId>jersey-client</artifactId>-->
-<!--         <version>3.1.5</version>-->
-<!--     </dependency>-->
-
      <dependency>
          <groupId>com.googlecode.json-simple</groupId>
          <artifactId>json-simple</artifactId>
          <version>1.1.1</version>
      </dependency>
 
-     <!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-rs-client -->
      <dependency>
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf-rt-rs-client</artifactId>
          <version>4.0.3</version>
      </dependency>
+
+     <dependency>
+         <groupId>org.projectlombok</groupId>
+         <artifactId>lombok</artifactId>
+         <version>1.18.30</version>
+         <scope>provided</scope>
+     </dependency>
+
 
  </dependencies>
 </project>
